# gas-simulator

./: .editorconfig  .env  .env.example  Cargo.toml  LICENSE.md  README.md  Rocket.toml  diesel.toml  interop.py  todo.md
.github/ISSUE_TEMPLATE/: backend-bug-report.md  backend-feature-request.md  frontend-bug.md  frontend-feature-request.md
db/: init.sql
migrations/2025-01-24-162354_create_tables/: down.sql  up.sql
src/: db.rs  error.rs  main.rs  model.rs  models.rs  policy.rs  schema.rs
src/api/: login.rs  mod.rs
src/api/contests/: jollies.rs  mod.rs  questions.rs  submissions.rs  teams.rs  update_times_jollies.sql  update_times_submissions.sql
src/contest/: contest.rs  fetch.rs  import.rs  mod.rs  pages.rs
static/: create.html  openapi.yaml  ranking.css  ranking.js
static/scripts/: contests.js  create.js  flipdown.js  headerfooter.js  jsonform.js  privacy_policy.js  ranking.js  settings.js  submit.js  submitter.js
static/static/: contests.css  contests.js  create.css  create.js  headerfooter.css  headerfooter.js  jsonform.js  ranking.css  settings.css  settings.js
static/styles/: contests.css  create.css  flipdown.css  headerfooter.css  privacy_policy.css  ranking.css  settings.css  submit.css  submitter.css  theme.css
templates/: base.html.tera  contest_editor.html.tera  contests.html.tera  create.html.tera  footer.html.tera  header.html.tera  privacy_policy.html.tera  ranking.html.tera  settings.html.tera  submit.html.tera  submitter.html.tera
