[package]
name = "gas-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
chrono-tz = "0.10.1"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
regex = "1.11.1"
ring = "0.17.8"
scraper = "0.22.0"
serde = "1.0.217"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.20.0", features = ["derive"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.reqwest]
version = "0.12.12"
features = ["cookies"]

[dependencies.diesel]
version = "2.1.6"
features = ["chrono"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]
